k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: massage-app
  namespace: massage-booking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: massage-app
  template:
    metadata:
      labels:
        app: massage-app
    spec:
      containers:
        - name: app
          image: mihaelatrajkovska/massage-booking-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          command:
            - "./wait-for-it.sh"
            - "massage-db"
            - "5432"
            - "--"
            - "flask"
            - "run"
            - "--host=0.0.0.0"
