k8s/db-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: massage-db
  namespace: massage-booking
  labels:
    app: massage-db
spec:
  clusterIP: None   # headless service за StatefulSet
  selector:
    app: massage-db
  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: massage-db
  namespace: massage-booking
spec:
  serviceName: massage-db
  replicas: 1
  selector:
    matchLabels:
      app: massage-db
  template:
    metadata:
      labels:
        app: massage-db
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: db-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
